chapter_02/ToDo_app/todos-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api
  labels:
    app: todos-api
    redis-access: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-api
  template:
    metadata:
      labels:
        app: todos-api
    spec:
      containers:
      - name: todos-api
        image: mihirshah99/todos:latest
        ports:
        - containerPort: 8082
