chapter_02/ToDo_app/todos-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-api
spec:
  selector:
    app: todos-api
  ports:
    - protocol: TCP
      port: 8082
